log/build_2026-01-29_10-38-42/retail_assistant_bringup/stderr.log
  File "/home/kendell/retail_assistant_ws/install/retail_assistant_bringup/lib/python3.10/site-packages/retail_assistant_bringup/MCU_to_Pi.py", line 5
    from
        ^
SyntaxError: invalid syntax

